<resources>

    <string name="app_name">Readlog</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">Readlog</string>
    <string name="Button_one">+1</string>
    <string name="Button_Backup">Backup</string>
    <string name="Button_History">todo</string>
    <string name="history_title">Books Read Log</string>
    <string name="Button_Restore">Restore</string>
    <string name="Button_About">About</string>
    <string name="Button_minus">-1</string>
    <string name="Button_Close">Close</string>
    <string name="TextView_Content">Total pages:</string>
    <string name="Backup_succeed">Backup succeed!</string>
    <string name="Backup_fail">Backup fail!</string>
    <string name="Restore_succeed">Restore succeed!</string>
    <string name="Restore_fail">Restore fail!</string>
    <string name="Read_total">Read total&#160;</string>
    <string name="Pages_today">&#160;pages, today&#160;</string>
    <string name="Pages_total">&#160;pages, total&#160;</string>
    <string name="Books">&#160;books</string>
    <string name="Email">Email:&#160;</string>
    <string name="Author">Author:&#160;</string>
    <string name="Recent">Recent&#160;</string>
    <string name="Days">&#160;days</string>
    <string name="Date">Date</string>
    <string name="Pages">Pages</string>
    <string name="ReadingStatus">Reading status</string>

</resources>
